revice/project/load-balancer.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  containers:
  - name: nginx
    image: nginx:latest
    ports:
    - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  type: LoadBalancer  # Exposes it to the internet (in supported environments)
  selector:
    app: nginx
  ports:
  - protocol: TCP
    port: 80          # Port exposed externally
    targetPort: 80    # Port on the container
