revice/project/payment.yaml
apiVersion: v1 
kind: Service
metadata: 
  name: payment-service
spec:
  type: ClusterIP  
  selector: 
    appName: payment
  ports: 
    - protocol: TCP 
      port: 8080
      targetPort: 8080
