revice/project/shipping.yaml
apiVersion: v1 
kind: Service
metadata: 
  name: shipping-service
  namespace: roboshop
spec:
  type: ClusterIP  
  selector: 
    appName: shipping
  ports: 
    - protocol: TCP 
      port: 8080
      targetPort: 8080
