revice/project/test.yaml
---
apiVersion: v1 
kind: Namespace 
metadata: 
  name: test
---
apiVersion: v1 
kind: Service 
metadata: 
  name: test-loadbalancer 
  namespace: test
spec: 
  type: LoadBalancer 
  selector: 
    appName: test 
  ports: 
    - protocol: TCP 
      port: 80 
      targetPort: 80 
---
apiVersion: v1 
kind: Pod 
metadata: 
  name: test 
  namespace: test
  labels: 
    appName: test
spec: 
  containers:
  - name: test
    image: docker.io/manupanand/test:latest
    ports:
    - containerPort: 80
