revice/project/user.yaml
apiVersion: v1 
kind: Service
metadata: 
  name: user-service
  namespace: roboshop
spec:
  type: ClusterIP  
  selector: 
    appName: user
  ports: 
    - protocol: TCP 
      port: 8080
      targetPort: 8080
